Fix collect list to java 17